@@ -19,7 +19,6 @@ use Cobweb\ExternalImport\Domain\Repository\ConfigurationRepository;
 use Nimut\TestingFramework\TestCase\FunctionalTestCase;
 use TYPO3\CMS\Core\Localization\LanguageService;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
-use TYPO3\CMS\Extbase\Object\ObjectManager;
 
 /**
  * Test suite for the ConfigurationRepository class.
@@ -50,8 +49,7 @@ class ConfigurationRepositoryTest extends FunctionalTestCase
             // Configuration repository needs a global LanguageService object
             $GLOBALS['LANG'] = GeneralUtility::makeInstance(LanguageService::class);
 
-            $objectManager = GeneralUtility::makeInstance(ObjectManager::class);
-            $this->subject = $objectManager->get(ConfigurationRepository::class);
+            $this->subject = GeneralUtility::makeInstance(ConfigurationRepository::class);
         }
         catch (\Exception $e) {
             self::markTestSkipped(
